kubernetes/apps/paperless/ingress.yaml
# Kapitel 25: im Tailnet unter https://paperless.<tailnet>.ts.net
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: paperless
      port:
        number: 8000
  tls:
    - hosts:
        - paperless
